# Avikal

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLI_USAGE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  security-policy.json
backend/: MANIFEST.in  README.md  README_PACKAGE.md  api_server.py  avikal.cmd  avikal.py  cli.py  core_server.py  pyinstaller-backend.spec  pyproject.toml  requirements-build.txt  requirements-cli.txt  requirements-lock-windows.txt  requirements.txt  setup.py
backend/docs/: archive_engine.md  multi_file_test_results.md  quickstart.md
backend/native/avikal_backend_native/: Cargo.toml
backend/native/avikal_backend_native/src/: chess_codec.rs  lib.rs  openssl_native.rs
backend/scripts/: build_native_extension.py  drand_timelock_helper.mjs  package-lock.json  package.json
backend/src/avikal_backend/: __init__.py  __main__.py  _native.pyi  core_main.py  runtime_paths.py  runtime_requirements.py  version.py
backend/src/avikal_backend/api/: aavrit_client.py  aavrit_crypto.py  aavrit_state.py  archive_helpers.py  config.py  drand.py  errors.py  preview_sessions.py  routes.py  runtime.py  schemas.py  server.py
backend/src/avikal_backend/archive/: __init__.py  chess_metadata.py  compression.py  compression_policy.py  input_safety.py  path_safety.py  reporting.py  runtime_logging.py
backend/src/avikal_backend/archive/format/: __init__.py  container.py  header.py  indexed_payload.py  manifest.py  metadata.py  metadata_pack.py  metadata_unpack.py  metadata_validation.py  multifile_stream.py  multipart.py
backend/src/avikal_backend/archive/pipeline/: __init__.py  decoder.py  encoder.py  keychain_security.py  multi_file_decoder.py  multi_file_encoder.py  payload_streaming.py  progress.py  rekey.py
backend/src/avikal_backend/archive/security/: __init__.py  archive_signature.py  crypto.py  key_wrap.py  native_bridge.py  password_validator.py  pqc_keyfile.py  pqc_provider.py  time_lock.py  trusted_timestamp.py
backend/src/avikal_backend/audit/: __init__.py  activity_audit.py
backend/src/avikal_backend/chess/: README.md  __init__.py  board.py  constants.py  move.py  pgn.py  svg.py
backend/src/avikal_backend/chess_codec/: README.md  __init__.py  decoder.py  encoder.py  native_bridge.py
backend/src/avikal_backend/cli/: __init__.py  __main__.py  formatters.py  inputs.py  main.py  parser.py
backend/src/avikal_backend/core/: __init__.py  aavrit_client.py  archive_sessions.py  diagnostics.py  preview_sessions.py  private_workspace.py  redaction.py  rpc_stdio.py  schemas.py  secure_delete.py  services.py  temp_janitor.py  user_preferences.py
backend/src/avikal_backend/mnemonic/: __init__.py  generator.py  wordlist.py
backend/src/avikal_backend/services/: __init__.py  ntp_service.py
backend/src/avikal_backend/wordlists/: __init__.py  wordlist_hi_2048_v1.txt  wordlist_hi_roman_2048_v1.txt
backend/tests/: conftest.py  test_aavrit_route.py  test_activity_audit.py  test_api_archive_routing.py  test_archive_fuzz_smoke.py  test_archive_security_guards.py  test_archive_sessions.py  test_assurance_report_cli.py  test_assured_archive_features.py  test_chess_recursive_variations.py  test_cli_parser.py  test_core_rpc.py  test_core_timecapsule_security.py  test_creator_trust_policy.py  test_desktop_runtime_guards.py  test_drand_runtime.py  test_hindi_mnemonic.py  test_indexed_pipeline_optimization.py  test_local_backend_security.py  test_multipart_volumes.py  test_multiple_files.py  test_native_crypto.py  test_payload_streaming_native.py  test_pqc_keychain_integrity.py  test_pqc_keyfile_dual_password.py  test_pqc_provider.py  test_preview_sessions.py  test_progress_reporting.py  test_protection_matrix.py  test_rekey.py  test_secret_redaction.py  test_secure_delete.py  test_temp_janitor.py  test_timezone_handling.py
(+104 files in other folders)
