[package]
name = "avikal_backend_native"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "avikal_backend_native"
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10.3"
aes-gcm-stream = "0.2.4"
argon2 = "0.5.3"
flate2 = "1.1.5"
hkdf = "0.12.4"
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3-py311"] }
rand = "0.8.5"
sha2 = "0.10.9"
sha3 = "0.10.8"
zeroize = "1.8.2"
